--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://3.34.99.98:53140/splitmeet
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306
 spring.datasource.username=split
 spring.datasource.password=splitsplit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
