Fix: UserInfo 회원 탈퇴 및 로그아웃 accessToken 검증으로만 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/splitmeet
+spring.datasource.url=jdbc:mysql://arm.marinesnow34.com:33306/splitmeet
 spring.datasource.username=split
 spring.datasource.password=splitsplit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 # jwt properties
 jwt.time.access=3600
