--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:mysql://arm.marinesnow34.com:33306/splitmeet
+#spring.datasource.url=jdbc:mysql://arm.marinesnow34.com:33306/splitmeet
+spring.datasource.url=jdbc:mysql://localhost:3306/split
 spring.datasource.username=split
 spring.datasource.password=splitsplit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
 # jwt properties
 jwt.time.access=86400
 jwt.time.refresh=86400
